syntax = "proto3";

package static;

import "google/protobuf/empty.proto";
import "../entities/crop.entity.proto";

message GetCropRequest {
    string id = 1;
}

message GetCropsResponse {
    repeated CropEntity items = 1;
}

message DeleteCropRequest {
    string id = 1;
}

message CreateCropRequest {
    CropEntity item = 1;
}

message UpdateCropRequest {
    string id = 1;
    CropEntity item = 2;
}
